feat(all): add alliance for the great lakes project

--- a/_includes/identity.html
+++ b/_includes/identity.html
@@ -1,7 +1,7 @@
 <div class="grid preview-wrapper">
     <figure class="unit unit-s-1 unit-m-1-2 unit-xl-1-4">
         <a href="{{site.baseurl}}../identity/pedal-power/">
-            <img src="{{site.baseurl}}/images/identity/pedal-power-cover.gif" alt="Pedal Power">
+            <img src="{{site.baseurl}}/images/identity/pedal-power-cover.gif" alt="Pedal Power Logo">
             <figcaption>
                 <h5>Pedal Power</h5>
             </figcaption>
@@ -10,7 +10,7 @@
     
     <figure class="unit unit-s-1 unit-m-1-2 unit-xl-1-4">
         <a href="{{site.baseurl}}../identity/personality-genie/">
-            <img src="{{site.baseurl}}/images/identity/personality-genie-cover.gif" alt="Personality Genie">
+            <img src="{{site.baseurl}}/images/identity/personality-genie-cover.gif" alt="Personality Genie Logo">
             <figcaption>
                 <h5>Personality Genie</h5>
             </figcaption>
@@ -19,7 +19,7 @@
 
     <figure class="unit unit-s-1 unit-m-1-2 unit-xl-1-4">
         <a href="{{site.baseurl}}../identity/distinctive-audio/">
-            <img src="{{site.baseurl}}/images/identity/distinctive-audio-cover.gif" alt="Distinctive Audio">
+            <img src="{{site.baseurl}}/images/identity/distinctive-audio-cover.gif" alt="Distinctive Audio Logo">
             <figcaption>
                 <h5>Distinctive Audio</h5>
             </figcaption>
@@ -27,8 +27,8 @@
     </figure>
 
     <figure class="unit unit-s-1 unit-m-1-2 unit-xl-1-4">
-        <a href="{{site.baseurl}}../illustration/blues-brothers/">
-            <img src="{{site.baseurl}}/images/illustration/blues-brothers-cover.jpg" alt="Blues Brothers">
+        <a href="{{site.baseurl}}../identity/alliance-for-the-great-lakes/">
+            <img src="{{site.baseurl}}/images/identity/great-lakes-cover.gif" alt="Alliance for the Great Lakes Logo">
             <figcaption>
                 <h5>Blues Brothers</h5>
             </figcaption>
