feat(all): add nobile rackets project

--- a/_includes/web-design.html
+++ b/_includes/web-design.html
@@ -1,4 +1,24 @@
 <div class="grid preview-wrapper">
+    
+    <figure class="unit unit-s-1 unit-m-1-2 unit-xl-1-4">
+        <a href="{{site.baseurl}}../web-design/palisar/">
+            <img src="{{site.baseurl}}/images/web-design/palisar-cover.jpg" alt="Palisar Website Mockup">
+            <figcaption>
+                <h5>Palisar</h5>
+            </figcaption>
+        </a>
+    </figure>
+    
+    <figure class="unit unit-s-1 unit-m-1-2 unit-xl-1-4">
+        <a href="{{site.baseurl}}../web-design/nobile-rackets/">
+            <img src="{{site.baseurl}}/images/web-design/nobile-rackets-cover.jpg" alt="Nobile Rackets Website Mockup">
+            <figcaption>
+                <h5>Nobile Rackets</h5>
+            </figcaption>
+        </a>
+    </figure> 
+    
+    <!--
     <figure class="unit unit-s-1 unit-m-1-2 unit-xl-1-4">
         <a href="{{site.baseurl}}../web-design/ascent-app/">
             <img src="{{site.baseurl}}/images/web-design/ascent-app-cover.jpg" alt="Ascent App">
@@ -6,22 +26,13 @@
                 <h5>Ascent App</h5>
             </figcaption>
         </a>
-    </figure>
+    </figure> -->
     
     <figure class="unit unit-s-1 unit-m-1-2 unit-xl-1-4">
         <a href="{{site.baseurl}}../web-design/good-to-talk-app/">
             <img src="{{site.baseurl}}/images/web-design/good-to-talk-cover.jpg" alt="Good to Talk">
             <figcaption>
                 <h5>Good to Talk</h5>
-            </figcaption>
-        </a>
-    </figure>
-
-    <figure class="unit unit-s-1 unit-m-1-2 unit-xl-1-4">
-        <a href="{{site.baseurl}}../web-design/palisar/">
-            <img src="{{site.baseurl}}/images/web-design/palisar-cover.jpg" alt="Palisar">
-            <figcaption>
-                <h5>Palisar</h5>
             </figcaption>
         </a>
     </figure>
