--- a/css/grids.css
+++ b/css/grids.css
@@ -61,6 +61,14 @@
     .unit-m-2-3 {
         width: 66.6666%;   
     }
+    
+    .unit-m-1-4 {
+        width: 25%;   
+    }
+    
+    .unit-m-3-4 {
+        width: 75%;   
+    }
 }
 
 @media (min-width: 40.063em) {
