feat(all): add alliance for the great lakes web project

--- a/_includes/web-design.html
+++ b/_includes/web-design.html
@@ -10,13 +10,22 @@
     </figure>
     
     <figure class="unit unit-s-1 unit-m-1-2 unit-xl-1-4">
+        <a href="{{site.baseurl}}../web-design/alliance-for-the-great-lakes-web/">
+            <img src="{{site.baseurl}}/images/web-design/great-lakes-web-cover.jpg" alt="Alliance for the Great lakes Website Mockup">
+            <figcaption>
+                <h5>Alliance for the Great Lakes</h5>
+            </figcaption>
+        </a>
+    </figure> 
+    
+    <figure class="unit unit-s-1 unit-m-1-2 unit-xl-1-4">
         <a href="{{site.baseurl}}../web-design/nobile-rackets/">
             <img src="{{site.baseurl}}/images/web-design/nobile-rackets-cover.jpg" alt="Nobile Rackets Website Mockup">
             <figcaption>
                 <h5>Nobile Rackets</h5>
             </figcaption>
         </a>
-    </figure> 
+    </figure>
     
     <!--
     <figure class="unit unit-s-1 unit-m-1-2 unit-xl-1-4">
@@ -26,7 +35,7 @@
                 <h5>Ascent App</h5>
             </figcaption>
         </a>
-    </figure> -->
+    </figure>
     
     <figure class="unit unit-s-1 unit-m-1-2 unit-xl-1-4">
         <a href="{{site.baseurl}}../web-design/good-to-talk-app/">
@@ -35,7 +44,7 @@
                 <h5>Good to Talk</h5>
             </figcaption>
         </a>
-    </figure>
+    </figure> -->
 
     <figure class="unit unit-s-1 unit-m-1-2 unit-xl-1-4">
         <a href="{{site.baseurl}}../web-design/galactic-adventures/">
