--- a/css/grids.css
+++ b/css/grids.css
@@ -69,6 +69,10 @@
     .unit-m-3-4 {
         width: 75%;   
     }
+    
+    .unit-m-1-6 {
+        width: 16.6667%;   
+    }
 }
 
 @media (min-width: 40.063em) {
