--- a/css/main.css
+++ b/css/main.css
@@ -315,8 +315,7 @@ a + p {
 
 #columns > p {
     margin-top: 0;
-    margin-bottom: 0;
-    text-indent: 1.5em;
+    margin-bottom: 1em;
 }
 
 h1 #columns p:last-child {
@@ -336,12 +335,6 @@ h1 #columns p:last-child {
 h3 + h5 {
     text-align: center;
     font-weight: normal;
-}
-
-.contact {
-    margin-top: 0;
-    margin-bottom: 0;
-    text-indent: 1.5em; 
 }
 
 .border-bottom {
@@ -504,6 +497,10 @@ section figure:hover figcaption {
 
 .nobile-desktop {
     margin-right: 10%;
+}
+
+.great-lakes {
+    margin-right: 2%;
 }
 
 /* --------------------------
