refactor(html): fix navigation bug with great lakes projects

--- a/_includes/identity.html
+++ b/_includes/identity.html
@@ -27,7 +27,7 @@
     </figure>
 
     <figure class="unit unit-s-1 unit-m-1-2 unit-xl-1-4">
-        <a href="{{site.baseurl}}../identity/alliance-for-the-great-lakes/">
+        <a href="{{site.baseurl}}../identity/great-lakes/">
             <img src="{{site.baseurl}}/images/identity/great-lakes-cover.gif" alt="Alliance for the Great Lakes Logo">
             <figcaption>
                 <h5>Blues Brothers</h5>
