feat(all): add dmand Unlimited project

--- a/_includes/web-design.html
+++ b/_includes/web-design.html
@@ -10,13 +10,22 @@
     </figure>
     
     <figure class="unit unit-s-1 unit-m-1-2 unit-xl-1-4">
+        <a href="{{site.baseurl}}../web-design/dmand-unlimited/">
+            <img src="{{site.baseurl}}/images/web-design/dmand-unlimited-cover.jpg" alt="dmand Unlimited Website Preview">
+            <figcaption>
+                <h5>dmand Unlimited</h5>
+            </figcaption>
+        </a>
+    </figure>
+    
+    <figure class="unit unit-s-1 unit-m-1-2 unit-xl-1-4">
         <a href="{{site.baseurl}}../web-design/great-lakes/">
             <img src="{{site.baseurl}}/images/web-design/great-lakes-web-cover.jpg" alt="Alliance for the Great lakes Website Mockup">
             <figcaption>
                 <h5>Alliance for the Great Lakes</h5>
             </figcaption>
         </a>
-    </figure> 
+    </figure>
     
     <figure class="unit unit-s-1 unit-m-1-2 unit-xl-1-4">
         <a href="{{site.baseurl}}../web-design/nobile-rackets/">
@@ -44,7 +53,7 @@
                 <h5>Good to Talk</h5>
             </figcaption>
         </a>
-    </figure> -->
+    </figure>
 
     <figure class="unit unit-s-1 unit-m-1-2 unit-xl-1-4">
         <a href="{{site.baseurl}}../web-design/galactic-adventures/">
@@ -53,5 +62,5 @@
                 <h5>Galactic Adventures</h5>
             </figcaption>
         </a>
-    </figure>
+    </figure> -->
 </div>
