feat(all): add rocking horse project

--- a/_includes/identity.html
+++ b/_includes/identity.html
@@ -30,7 +30,7 @@
         <a href="{{site.baseurl}}../identity/great-lakes/">
             <img src="{{site.baseurl}}/images/identity/great-lakes-cover.gif" alt="Alliance for the Great Lakes Logo">
             <figcaption>
-                <h5>Blues Brothers</h5>
+                <h5>Alliance for the Great Lakes</h5>
             </figcaption>
         </a>
     </figure>
