--- a/_includes/print.html
+++ b/_includes/print.html
@@ -17,6 +17,15 @@
         </a>
     </figure>
     
+    <figure class="unit unit-s-1 unit-m-1-2 unit-xl-1-4">
+        <a href="{{site.baseurl}}../print/rocking-horse/">
+            <img src="{{site.baseurl}}/images/print/rocking-horse-cover.jpg" alt="Rocking Horse">
+            <figcaption>
+                <h5>Rocking Horse</h5>
+            </figcaption>
+        </a>
+    </figure>
+    
     <!--
     <figure class="unit unit-s-1 unit-m-1-2 unit-xl-1-4">
         <a href="{{site.baseurl}}../print/go-with-the-flow/">
@@ -26,7 +35,7 @@
             </figcaption>
         </a>
     </figure>
-    -->
+    
 
     <figure class="unit unit-s-1 unit-m-1-2 unit-xl-1-4">
         <a href="{{site.baseurl}}../print/collage/">
@@ -35,7 +44,7 @@
                 <h5>Collage</h5>
             </figcaption>
         </a>
-    </figure>
+    </figure> -->
 
     <figure class="unit unit-s-1 unit-m-1-2 unit-xl-1-4">
         <a href="{{site.baseurl}}../print/obsessed-with-speed/">
