feat(all): add fast company project

--- a/_includes/print.html
+++ b/_includes/print.html
@@ -1,7 +1,7 @@
 <div class="grid preview-wrapper">
     <figure class="unit unit-s-1 unit-m-1-2 unit-xl-1-4">
         <a href="{{site.baseurl}}../print/bridgehead/">
-            <img src="{{site.baseurl}}/images/print/bridgehead-cover.jpg" alt="Bridgehead">
+            <img src="{{site.baseurl}}/images/print/bridgehead-cover.jpg" alt="Bridgehead Brochure">
             <figcaption>
                 <h5>Bridgehead</h5>
             </figcaption>
@@ -10,7 +10,7 @@
     
     <figure class="unit unit-s-1 unit-m-1-2 unit-xl-1-4">
         <a href="{{site.baseurl}}../print/cirque-du-soleil/">
-            <img src="{{site.baseurl}}/images/print/cirque-du-soleil-cover.jpg" alt="Cirque du Soleil">
+            <img src="{{site.baseurl}}/images/print/cirque-du-soleil-cover.jpg" alt="Cirque du Soleil Anual Report">
             <figcaption>
                 <h5>Cirque du Soleil</h5>
             </figcaption>
@@ -19,9 +19,18 @@
     
     <figure class="unit unit-s-1 unit-m-1-2 unit-xl-1-4">
         <a href="{{site.baseurl}}../print/rocking-horse/">
-            <img src="{{site.baseurl}}/images/print/rocking-horse-cover.jpg" alt="Rocking Horse">
+            <img src="{{site.baseurl}}/images/print/rocking-horse-cover.jpg" alt="Rocking Horse Manual">
             <figcaption>
                 <h5>Rocking Horse</h5>
+            </figcaption>
+        </a>
+    </figure>
+    
+    <figure class="unit unit-s-1 unit-m-1-2 unit-xl-1-4">
+        <a href="{{site.baseurl}}../print/fast-company/">
+            <img src="{{site.baseurl}}/images/print/fast-company-cover.jpg" alt="Fast Company Magazine">
+            <figcaption>
+                <h5>Fast Company</h5>
             </figcaption>
         </a>
     </figure>
@@ -44,7 +53,7 @@
                 <h5>Collage</h5>
             </figcaption>
         </a>
-    </figure> -->
+    </figure>
 
     <figure class="unit unit-s-1 unit-m-1-2 unit-xl-1-4">
         <a href="{{site.baseurl}}../print/obsessed-with-speed/">
@@ -53,5 +62,5 @@
                 <h5>Obsessed with Speed</h5>
             </figcaption>
         </a>
-    </figure>
+    </figure> -->
 </div>
